# tonic_ragas_logger

./: .gitignore  README.md  pyproject.toml
examples/: ragas_example.ipynb
tonic_ragas_logger/: __init__.py  config.py  ragas_validate_api.py  validate_api.py
tonic_ragas_logger/classes/: benchmark.py  llm_response.py
tonic_ragas_logger/utils/: telemetry.py
tonic_validate/: __init__.py  config.py
tonic_validate/classes/: __init__.py
