[tool.poetry]
name = "tonic-ragas-logger"
version = "1.2.3"
description = "Uploads results from ragas to Tonic Validate."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
python-dotenv = "^1.0.1"
ragas = "^0.1.2"
tonic-validate = ">=6.1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.15"
ipykernel = "^6.29.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
